# project_base

./: .clang-format  .clang-format-ignore  .clang-tidy  CMakeLists.txt  README.md  imgui.ini
include/: common.h
include/learnopengl/: DeferredShading.h  camera.h  cubemap.h  filesystem.h  hdr.h  image.h  magic_light.h  mesh.h  model.h  shader.h  shader_m.h  shader_s.h  texture.h  texture2d.h  vampire.h
include/rg/: Camera.h  Error.h  Shader.h  mesh.h  model.h
resources/objects/barn/: barn.mtl
resources/objects/dracula/: dracula.mtl
resources/objects/garlic/: garlic.mtl
resources/objects/grass/: grass.mtl
resources/objects/lantern/: lantern.mtl
resources/objects/moon/: Moon.mtl
resources/objects/pine/: pine.mtl
resources/shaders/: 2.model_lighting.fs  bloom.fs  deferred_shading.fs  g_buffer.frag  g_buffer.fs  light_source.frag  moon.fs  skybox.fs
src/: main.cpp
